@@ -60,7 +60,7 @@ Description: Header files and a static library for Python (v2.4)
 
 Package: idle-python2.4
 Architecture: all
-Depends: python2.4, python2.4-tk
+Depends: python2.4, python2.4-tk-deadsnakes
 Enhances: python2.4
 XB-Python-Version: 2.4
 Description: An IDE for Python (v2.4) using Tkinter
@@ -91,48 +91,48 @@ Package: python2.4-dbg
 Architecture: any
 Priority: extra
 Depends: python2.4 (>= ${binary:Version}), ${shlibs:Depends}
-Suggests: python2.4-gdbm-dbg, python2.4-tk-dbg
+Suggests: python2.4-gdbm-deadsnakes-dbg, python2.4-tk-deadsnakes-dbg
 Description: Debug Build of the Python Interpreter (version 2.4)
  Python interpreter configured with --pydebug. Dynamically loaded modules are
  searched in /usr/lib/python2.4/lib-dynload/debug first.
 
 
-Package: python2.4-tk
+Package: python2.4-tk-deadsnakes
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Depends: python2.4, ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
 Provides: ${python:Provides}
-Suggests: tix, python2.4-tk-dbg
+Suggests: tix, python2.4-tk-deadsnakes-dbg
 XB-Python-Version: ${python:Versions}
 Description: Tkinter - Writing Tk applications with Python
  A module for writing portable GUI applications with Python using Tk.
  Also known as Tkinter.
 
-Package: python2.4-gdbm
+Package: python2.4-gdbm-deadsnakes
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Depends: python2.4, ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
 Provides: ${python:Provides}
-Suggests: python2.4-gdbm-dbg
+Suggests: python2.4-gdbm-deadsnakes-dbg
 XB-Python-Version: ${python:Versions}
 Description: GNU dbm database support for Python
  GNU dbm database module for Python. Install this if you want to
  create or read GNU dbm database files with Python.
 
-Package: python2.4-tk-dbg
+Package: python2.4-tk-deadsnakes-dbg
 Architecture: any
 Priority: extra
 Section: debug
-Depends: ${python:Depends}, python2.4-tk (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: python2.4, ${python:Depends}, python2.4-tk-deadsnakes (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: Tkinter - Writing Tk applications with Python (debug extension)
  A module for writing portable GUI applications with Python using Tk.
  Also known as Tkinter.
  .
  This package contains the extensions built for the python debug interpreter.
 
-Package: python2.4-gdbm-dbg
+Package: python2.4-gdbm-deadsnakes-dbg
 Architecture: any
 Priority: extra
 Section: debug
-Depends: ${python:Depends}, python2.4-gdbm (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: python2.4, ${python:Depends}, python2.4-gdbm-deadsnakes (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: GNU dbm database support for Python (debug extension)
  GNU dbm database module for Python. Install this if you want to
  create or read GNU dbm database files with Python.
