@@ -60,7 +60,7 @@ Description: Header files and a static library for Python (v@VER@)
 
 Package: idle-@PVER@
 Architecture: all
-Depends: @PVER@, @PVER@-tk
+Depends: @PVER@, @PVER@-tk-deadsnakes
 Enhances: @PVER@
 XB-Python-Version: @VER@
 Description: An IDE for Python (v@VER@) using Tkinter
@@ -91,48 +91,48 @@ Package: @PVER@-dbg
 Architecture: any
 Priority: extra
 Depends: @PVER@ (>= ${binary:Version}), ${shlibs:Depends}
-Suggests: @PVER@-gdbm-dbg, @PVER@-tk-dbg
+Suggests: @PVER@-gdbm-deadsnakes-dbg, @PVER@-tk-deadsnakes-dbg
 Description: Debug Build of the Python Interpreter (version @VER@)
  Python interpreter configured with --pydebug. Dynamically loaded modules are
  searched in /usr/lib/@PVER@/lib-dynload/debug first.
 
 
-Package: @PVER@-tk
+Package: @PVER@-tk-deadsnakes
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Depends: @PVER@, ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
 Provides: ${python:Provides}
-Suggests: tix, @PVER@-tk-dbg
+Suggests: tix, @PVER@-tk-deadsnakes-dbg
 XB-Python-Version: ${python:Versions}
 Description: Tkinter - Writing Tk applications with Python
  A module for writing portable GUI applications with Python using Tk.
  Also known as Tkinter.
 
-Package: @PVER@-gdbm
+Package: @PVER@-gdbm-deadsnakes
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Depends: @PVER@, ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
 Provides: ${python:Provides}
-Suggests: @PVER@-gdbm-dbg
+Suggests: @PVER@-gdbm-deadsnakes-dbg
 XB-Python-Version: ${python:Versions}
 Description: GNU dbm database support for Python
  GNU dbm database module for Python. Install this if you want to
  create or read GNU dbm database files with Python.
 
-Package: @PVER@-tk-dbg
+Package: @PVER@-tk-deadsnakes-dbg
 Architecture: any
 Priority: extra
 Section: debug
-Depends: ${python:Depends}, @PVER@-tk (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: @PVER@, ${python:Depends}, @PVER@-tk-deadsnakes (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: Tkinter - Writing Tk applications with Python (debug extension)
  A module for writing portable GUI applications with Python using Tk.
  Also known as Tkinter.
  .
  This package contains the extensions built for the python debug interpreter.
 
-Package: @PVER@-gdbm-dbg
+Package: @PVER@-gdbm-deadsnakes-dbg
 Architecture: any
 Priority: extra
 Section: debug
-Depends: ${python:Depends}, @PVER@-gdbm (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: @PVER@, ${python:Depends}, @PVER@-gdbm-deadsnakes (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: GNU dbm database support for Python (debug extension)
  GNU dbm database module for Python. Install this if you want to
  create or read GNU dbm database files with Python.
