@@ -7,8 +7,10 @@ python2.4 (2.4.6-1ubuntu3.2.9.10.1~ppa6~maverick1) maverick; urgency=low
   * Correctly depend on and suggest related packages.
     - Specifically Tk for Idle and Tk and GDBM debug packages.
   * Build GDBM and Tk from this package.
+    - Those are generated as python2.4-tk-deadsnakes etc. so they don't
+      conflict with python-tk etc.
 
- -- Felix Krull <f_krull@gmx.de>  Mon, 13 Sep 2010 15:45:58 +0200
+ -- Felix Krull <f_krull@gmx.de>  Mon, 13 Sep 2010 17:07:22 +0200
 
 python2.4 (2.4.6-1ubuntu3.2.9.10.1~ppa5) lucid; urgency=low
 
